--- a/css/sass/contact.scss
+++ b/css/sass/contact.scss
@@ -53,7 +53,7 @@ h1{
 	height: 800px;
 	width: 800px;
 	margin: 0 auto;
-	background-image: url("../img/contact2.png");
+	background-image: url("../img/contact2.jpg");
 	background-size: 1600px 900px;
 	box-shadow: 0 3px 6px rgba(0,0,0,0.16), 0 3px 6px rgba(0,0,0,0.23);
 	border-radius: 10px;
