--- a/css/sass/loader.scss
+++ b/css/sass/loader.scss
@@ -1,3 +1,5 @@
+@import "var";
+
 .loader{
 	background-color: $blue;
 	height: 100%;
@@ -5,6 +7,13 @@
 	width: 100%;
 	z-index: 101;
 	
+}
+
+.loader p{
+  color: white;
+  font-weight: bold;
+  color: white;
+  font-size: 2em;
 }
 
 .sk-circle {
