Fix minor changes

--- a/css/master.css
+++ b/css/master.css
@@ -79,6 +79,12 @@ i.fa {
 li {
   display: inline-block; }
 
+@media only screen and (max-width: 1600px) {
+  ul.main-ul {
+    width: 120% !important; }
+
+  div.contact-photo {
+    width: 650px; } }
 body {
   height: 100vh; }
 
