Change font of logo

--- a/css/master.css
+++ b/css/master.css
@@ -42,8 +42,8 @@ a {
   padding-bottom: 14px; }
 
 h1.logo {
-  font-family: 'Yesteryear', cursive;
-  font-weight: 100;
+  font-family: 'Suez One', cursive;
+  font-weight: 500;
   cursor: pointer;
   color: #b3cde0 !important; }
 
