--- a/css/sass/body.scss
+++ b/css/sass/body.scss
@@ -59,8 +59,8 @@ a{
 
 h1.logo{
     
-    font-family: 'Yesteryear', cursive;
-	font-weight: 100;
+   font-family: 'Suez One', cursive;
+	font-weight: 500;
 	cursor: pointer;
 	color: $sky !important;
 
