Change all skills

--- a/css/master.css
+++ b/css/master.css
@@ -79,23 +79,48 @@ i.fa {
 li {
   display: inline-block; }
 
+body {
+  font-size: 16px; }
+
+ul.main-ul {
+  font-size: 14px; }
+
 @media only screen and (max-width: 1600px) {
   ul.main-ul {
-    width: 120% !important; }
+    width: 140% !important; }
 
   div.contact-photo {
-    width: 650px; } }
+    width: 650px; }
+
+  body {
+    font-size: 12px; } }
+@media only screen and (max-width: 1250px) {
+  body {
+    font-size: 10px; }
+
+  div.contact-photo {
+    width: 500px !important; }
+
+  svg {
+    height: 200px;
+    width: 200px; }
+
+  .hexagon-down span {
+    margin: 0 -1.3em; } }
+@media only screen and (max-width: 991px) {
+  body {
+    font-size: 14px; } }
 body {
   height: 100vh; }
 
 .main-banner {
   background-image: url("../img/background.png");
-  height: 110vh;
+  height: 120vh;
   background-size: 2200px 1200px;
   background-repeat: no-repeat; }
 
 .main-banner h1 {
-  font-size: 12em;
+  font-size: 10em;
   margin-top: .5em;
   color: #fc913a; }
 
@@ -150,9 +175,6 @@ svg:hover {
 
   .main-banner .redes {
     display: none; }
-
-  .hexagon-down span {
-    margin: 0 -.3em; }
 
   .main-banner {
     height: 100%;
@@ -422,6 +444,41 @@ nav li {
 @media only screen and (max-width: 1600px) {
   ul.main-ul {
     width: 140%; } }
+main .container {
+  text-align: center; }
+
+main .row {
+  margin-top: 4em; }
+
+.flex-skill {
+  display: flex;
+  justify-content: space-evenly; }
+
+.flex-skill-letra {
+  display: flex;
+  justify-content: space-around; }
+
+.intro {
+  font-size: 2em; }
+  .intro h1 {
+    font-size: 2em; }
+
+main h3 {
+  color: #fe5757;
+  font-weight: bold; }
+
+.skill-box {
+  height: 300px;
+  margin: 2em auto;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background-color: #ECF0F1; }
+
+.skill-box:hover {
+  box-shadow: 0 3px 6px rgba(0, 0, 0, 0.16), 0 3px 6px rgba(0, 0, 0, 0.23);
+  transition: .4s; }
+
 #skills p {
   font-size: 1.5em !important;
   margin-bottom: 4em; }
@@ -511,10 +568,11 @@ nav li {
   margin-top: 4em; }
 
 .img-skills {
-  display: inline-block;
-  margin-right: 1em;
-  height: 60px;
-  width: 60px; }
+  height: 70%;
+  width: 60%; }
+
+#nodejs {
+  width: 100%; }
 
 .img-skills#css {
   width: 100px !important; }
