--- a/css/sass/body.scss
+++ b/css/sass/body.scss
@@ -109,11 +109,46 @@ li{
 }
 
 
+body{
+		font-size: 16px;
+	}
+
+ul.main-ul{
+	font-size: 14px;
+}
+
 @media only screen and (max-width: 1600px){
 	ul.main-ul{
-		width: 120% !important;
+		width: 140% !important;
 	}
 	div.contact-photo{
 		width: 650px;
 	}
+	body{
+		font-size: 12px;
+	}
+        
+}
+
+
+@media only screen and (max-width: 1250px){
+	body{
+		font-size: 10px;
+	}
+	div.contact-photo{
+		width: 500px !important;
+	}
+	svg{
+	height: 200px;
+	width: 200px;}
+	.hexagon-down span{
+		margin: 0 -1.3em;
+	}
+}
+
+
+@media only screen and (max-width: 991px){
+	    body{
+    	font-size: 14px;
+    }
 }
