--- a/css/sass/skills.scss
+++ b/css/sass/skills.scss
@@ -1,6 +1,10 @@
 @import "var";
 
 
+main{
+	margin-bottom: 4em;
+}
+
 main .container{
 	text-align: center;
 }
@@ -16,6 +20,7 @@ main .row{
 .flex-skill-letra{
 	display: flex;
 	justify-content: space-around;
+	margin-top: 2em;
 }
 
 .intro{
