--- a/css/sass/banner.scss
+++ b/css/sass/banner.scss
@@ -4,6 +4,13 @@ body{
 	height: 100vh;
 }
 
+@media only screen and (max-height: 800px){
+	.main-banner{
+		height: auto !important;
+		padding-bottom: 4em;
+	}
+}
+
 
 
 .main-banner{
